crates/djls-templates/src/snapshots/djls_templates__parser__tests__html__parse_html_doctype.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodelist:
  - Text:
      content: "<!DOCTYPE html>"
      span:
        start: 0
        length: 15
line_offsets:
  - 0
