crates/djls-templates/src/snapshots/djls_templates__parser__tests__html__parse_html_tag.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodes:
  - Text:
      content: "<div class=\"container\">Hello</div>"
      span:
        start: 0
        length: 34
line_offsets:
  - 0
