crates/djls-templates/src/snapshots/djls_templates__parser__tests__html__parse_html_void.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodelist:
  - Text:
      content: "<input type=\"text\" />"
      span:
        start: 0
        length: 21
line_offsets:
  - 0
